# gif-effects

./: .gitignore  CMakeLists.txt
src/: image_effects.cpp  image_effects.h  main.cpp
